2013-03-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_quit_encoding_function): new function
	avatar.c (avt_quit), avtencoding.c: adapted

2013-03-16  Andreas K. Foerster  <info@akfoerster.de>

	* avtgraphic.h, avtgraphic.c: new files
	avatar.c: adapted

2013-03-15  Andreas K. Foerster  <info@akfoerster.de>

	* avtxbm.c, avtxpm.c, avtbmp.c: new files
	avatar.c: adapted

2013-03-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (screen): screen is a separate static variable again

	* avtencoding.c: new file
	avatar.c: adapted

2013-02-26  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h, filechooser.c (avta_file_selection, avta_filter):
	new option data

2013-02-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_choice): fix: check values

2013-02-24  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avtpalette.c (avt_palette_size): new function

	* colorchooser.c: use avt_menu

	* filechooser.c: use avt_menu

2013-02-23  Andreas K. Foerster  <info@akfoerster.de>

	* avtmenu.c: new file
	akfavatar.h: adapted
	lua/lua-avt.c (lavt_menu): adapted

2013-02-11  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_border3d):
	no coordinates, always draws around the graphic

2013-02-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_viewport): fix: sanitize parameters

2013-02-09  Andreas K. Foerster  <info@akfoerster.de>

	* avtinternals.h, avtdata.h:
	don't define AVT_HIDDEN, use #pragma instead

2013-02-08  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_border3d):
	new function

2013-02-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_bar3d, avt_border3d, avt_brighter)
	(avt_horizontal_line, avt_vertical_line): new functions
	(avt_show_name): adapted

2013-01-26  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (bell): block recursion

2012-12-26  Andreas K. Foerster  <info@akfoerster.de>
